unpackaged/main/default/objects/Clinical_Trial_Arm__c/Clinical_Trial_Arm__c.object-meta.xml
<CustomObject>
    <label>Clinical Trial Arm</label>
    <nameField>
        <displayFormat>CTAID-{0000}</displayFormat>
        <label>Clinical Trial Arm ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Trial Arms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>