unpackaged/main/default/objects/Clinical_Trial_Arm__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Combination of Clinical Trial ID and ArmGroupLabel</description>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>