unpackaged/main/default/objects/Clinical_Trial_Arm__c/fields/Readable_Description__c.field-meta.xml
<CustomField>
    <fullName>Readable_Description__c</fullName>
    <label>Readable Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>