unpackaged/main/default/objects/Clinical_Trial_Arm__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Experimental</fullName>
            </value>
            <value>
                <fullName>Active Comparator</fullName>
            </value>
            <value>
                <fullName>Placebo Comparator</fullName>
            </value>
            <value>
                <fullName>Sham Comparator</fullName>
            </value>
            <value>
                <fullName>No Intervention</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>